path to boost library was added
git-svn-id: svn://localhost/trunk@942 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/vc7/freeflow.vcproj
+++ b/surfit/vc7/freeflow.vcproj
@@ -249,7 +249,7 @@
 				OutputFile="../bin/libfreeflow.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="C:\Tcl\lib;..\..\libs\stxxl\lib71"
+				AdditionalLibraryDirectories="C:\Tcl\lib;..\..\libs\stxxl\lib71;..\..\libs\boost\lib"
 				ProgramDatabaseFile=".\../Release/libfreeflow.pdb"
 				ImportLibrary="../bin/libfreeflow.lib"
 				TargetMachine="1"/>
