--- a/surfit/vc7/sstuff.vcproj
+++ b/surfit/vc7/sstuff.vcproj
@@ -1376,10 +1376,40 @@
 				</File>
 			</Filter>
 			<Filter
-				Name="xxl"
+				Name="xxl_cpp"
 				Filter="">
 				<File
+					RelativePath="..\src_xxl\sstuff\bitvec_xxl.cpp">
+					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="TRUE">
+						<Tool
+							Name="VCCLCompilerTool"/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="TRUE">
+						<Tool
+							Name="VCCLCompilerTool"/>
+					</FileConfiguration>
+				</File>
+				<File
 					RelativePath="..\src_xxl\sstuff\shortvec_xxl.cpp">
+					<FileConfiguration
+						Name="Debug|Win32"
+						ExcludedFromBuild="TRUE">
+						<Tool
+							Name="VCCLCompilerTool"/>
+					</FileConfiguration>
+					<FileConfiguration
+						Name="Release|Win32"
+						ExcludedFromBuild="TRUE">
+						<Tool
+							Name="VCCLCompilerTool"/>
+					</FileConfiguration>
+				</File>
+				<File
+					RelativePath="..\src_xxl\sstuff\sizetvec_xxl.cpp">
 					<FileConfiguration
 						Name="Debug|Win32"
 						ExcludedFromBuild="TRUE">
@@ -1475,6 +1505,22 @@
 				</File>
 				<File
 					RelativePath="..\src\sstuff\vec_alg.h">
+				</File>
+			</Filter>
+			<Filter
+				Name="xxl_h"
+				Filter="">
+				<File
+					RelativePath="..\src_xxl\sstuff\bitvec_xxl.h">
+				</File>
+				<File
+					RelativePath="..\src_xxl\sstuff\shortvec_xxl.h">
+				</File>
+				<File
+					RelativePath="..\src_xxl\sstuff\sizetvec_xxl.h">
+				</File>
+				<File
+					RelativePath="..\src_xxl\sstuff\vec_xxl.h">
 				</File>
 			</Filter>
 		</Filter>
