--- a/surfit/Makefile.am
+++ b/surfit/Makefile.am
@@ -53,6 +53,7 @@ libsstuff_la_SOURCES += src/sstuff/intvec.cpp
 libsstuff_la_SOURCES += src/sstuff/read_txt.cpp     
 libsstuff_la_SOURCES += src/sstuff/rnd.cpp          
 libsstuff_la_SOURCES += src/sstuff/shortvec.cpp     
+libsstuff_la_SOURCES += src/sstuff/sizetvec.cpp
 libsstuff_la_SOURCES += src/sstuff/strvec.cpp
 libsstuff_la_SOURCES += src/sstuff/sstuff.cpp       
 libsstuff_la_SOURCES += src/sstuff/stepFunc.cpp     
@@ -87,7 +88,8 @@ libsstuff_la_HEADERS += src/sstuff/intvec.h
 libsstuff_la_HEADERS += src/sstuff/read_txt.h     
 libsstuff_la_HEADERS += src/sstuff/real.h         
 libsstuff_la_HEADERS += src/sstuff/rnd.h          
-libsstuff_la_HEADERS += src/sstuff/shortvec.h     
+libsstuff_la_HEADERS += src/sstuff/shortvec.h  
+libsstuff_la_HEADERS += src/sstuff/sizetvec.h   
 libsstuff_la_HEADERS += src/sstuff/strvec.h
 libsstuff_la_HEADERS += src/sstuff/sstuff.h       
 libsstuff_la_SOURCES += src/sstuff/sstuff_ie.h    
